  in ezcPersistentObjectProperty.  This property is not used until now. And
  causes no change in the usage of the system.
- Fixed bug #8340: Column names are not escaped.
- Implemented suggestion #8526: Allow retrieving of the database handler and
  definition manager through the database and definitionManager properties of
  the ezcPersistentObjectSession class to help with transaction support.
- Implemented suggestion #8595: Added the ezcPersistentMultiManager class that
  serves as a singleton mechanism for ezcPersistentSession.	
- Implemented suggestion #8664: ezcPersistentSession: Cast values and skip
  undefined properties. Patch by Joel Arvidsson.
- Added support for several definition managers through
  ezcPersistentMultiManager.
- Added the method ezcPersistentFindIterator::flush method that flushes the
  rest of the resultset from an iterator. This method must be called if you
  decide not to loop over the complete resultset of an iterator.
- Constructor parameters $key and $incrementKey to ezcPersistentObjectDefinition
  are now deprecated.


1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed small CS issues.


1.1rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request 8248: ezcPersistentSession should throw more
  descriptive exceptions.


1.1beta1 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #7884: ezcPersistentSession sometimes triggers PDO "General error:
  2014" exceptions.
- Fixed #8042: PersistentObject requires use of database ID counter.

  *Note:* The change involves a slight BC incompatible change.
  ezcPersistentIdentifierGenerator is no longer an interface but an abstract
  class. Implementors must change 'implements' to 'extends' to reflect this.

- Added ezcPersistentManualGenerator which can be used to set the ID's of new